# native-xbullet

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
include/: joltjni_bridge.h  net_xmx_nativexbullet_Gravity.h  net_xmx_nativexbullet_NativeGravityTest.h
src/: main.cpp  xbullet_impl.cpp
